--- a/css/styles.css
+++ b/css/styles.css
@@ -25,15 +25,15 @@
 }
 
 .chatWindow {
-	height: 90%;
-	min-height: 400px;
-	border: 1px solid black;
+	height: 400px;
+	min-height: 50px;
 	overflow-y:scroll;
+	padding: 0px 0px 0px 0px ;
 }
 
 body,html {
 	width:100%;
-	height:100%;
+	height:95%;
 }
 
 .langselect {
@@ -42,11 +42,12 @@ body,html {
 
 .mainForm {
 	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .inline {
 	display: inline-block;
-	margin: 10px 10px 10px 10px;
+	margin: 5px 5px 5px 5px;
 }
 
 .pic {
@@ -60,7 +61,7 @@ body,html {
 	background-color:#7DC6E3; 
 	color:white;
 	min-height: 40px;
-	width: 60% 
+	width: 70% 
 }
 
 .msgMsg {
@@ -72,5 +73,9 @@ body,html {
 	background-color:#F2913D; 
 	color:white;
 	min-height: 40px;
-	width: 60% 
+	width: 70% 
+}
+
+.msgDiv {
+	margin-bottom:10px;
 }
